syntax = "proto3";

package product;

option go_package = "github.com/mirawbtw/assignment6/api";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc UpdateProductStock(UpdateStockRequest) returns (ProductResponse);
}

message GetProductRequest {
  string id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
  int32 stock = 4;
}

message UpdateStockRequest {
  string id = 1;
  int32 quantity = 2;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 stock = 5;
}